--- a/disclaimer.html
+++ b/disclaimer.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cool Magazine</title>
+    <title>Timeline Mag</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="/images/Logo.svg">
   </head>
   <body>
     <div class="wrapper">
@@ -71,7 +72,7 @@
 
     </div>
     <script src="script.js"></script>
-  </body>
+    </body>
 
   
 </html>
