Add empty metadataviewer box

--- a/art.html
+++ b/art.html
@@ -28,7 +28,12 @@
         <button class="style-button" onclick="changeArticle(-1)">&larr;</button>
         <button class="style-button" onclick="changeArticle(1)">&rarr;</button>
       </div>
-      <section id="currentArticle"></section>
+      <!-- Main content -->
+      <div id="main-content">
+        <div id="metadataviewer">Metadata</div>
+        <section id="currentArticle"></section>
+      </div>
+      <!-- Footer -->
       <div id="footer"></div>
     </div>
     <script src="script.js"></script>
