Add persons metadata

--- a/art.html
+++ b/art.html
@@ -30,7 +30,13 @@
       </div>
       <!-- Main content -->
       <div id="main-content">
-        <div id="metadataviewer">Metadata</div>
+        <div id="metadataviewer">
+          <!-- <h3>Metadata</h3> -->
+          <button type="button" class="collapsible">People</button>
+          <div class="content" id="person"></div>
+          <button type="button" class="collapsible">Institutions</button>
+          <div class="content"></div>
+        </div>
         <section id="currentArticle"></section>
       </div>
       <!-- Footer -->
