Add scroll to clicked mention

--- a/American_Icon.html
+++ b/American_Icon.html
@@ -4,6 +4,7 @@
       <h1>
         American Icon -
         <span
+          id="FaithRinggold"
           class="mention person"
           about="FaithRinggold"
           data-label="Faith Ringgold"
@@ -15,8 +16,9 @@
       <div class="info">
         <p>
           <span
+            id="JenniferSMusawwir"
             class="mention person"
-            about="JenniferS.Musawwir"
+            about="JenniferSMusawwir"
             data-label="Jennifer S. Musawwir"
             >Jennifer S. Musawwir</span
           >
@@ -122,6 +124,7 @@
           bachelor's and master's degrees in Fine Art, married her first
           husband, and became the mother to two daughters,
           <span
+            id="MicheleWallace"
             class="mention person"
             about="MicheleWallace"
             data-label="Michele Wallace"
@@ -129,6 +132,7 @@
           >
           and
           <span
+            id="BarbaraWallace"
             class="mention person"
             about="BarbaraWallace"
             data-label="Barbara Wallace"
@@ -163,6 +167,7 @@
         <p>
           In the interim, she married her second husband,
           <span
+            id="BurdettRinggold"
             class="mention person"
             about="BurdettRinggold"
             data-label="Burdett Ringgold"
@@ -648,6 +653,7 @@
         <p>
           The central character of this story,
           <span
+            id="WillieMarieSimone"
             class="mention person"
             about="WillieMarieSimone"
             data-label="Willie Marie Simone"
@@ -803,7 +809,11 @@
             data-label="Willie Marie Simone"
             >Willie Marie </span
           >, and
-          <span class="mention person" about="Marlena" data-label="Marlena"
+          <span
+            id="Marlena"
+            class="mention person"
+            about="Marlena"
+            data-label="Marlena"
             >Marlena
           </span>
 
