--- a/art.html
+++ b/art.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/x-icon" href="/images/Logo.svg" />
     <link id="articlestyle" rel="stylesheet" href="./styles/1500.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery.scrollto@2.1.3/jquery.scrollTo.min.js"></script>
     <script src="articles.js"></script>
   </head>
   <body>
