Change metadata when changing aticle

--- a/art.html
+++ b/art.html
@@ -35,7 +35,11 @@
           <!-- <h3>Metadata</h3> -->
           <button type="button" class="collapsible">People</button>
           <div class="content" id="person"></div>
-          <button type="button" class="collapsible">Institutions</button>
+          <button type="button" class="collapsible">Places</button>
+          <div class="content"></div>
+          <button type="button" class="collapsible">Events</button>
+          <div class="content"></div>
+          <button type="button" class="collapsible">Concepts</button>
           <div class="content"></div>
         </div>
         <section id="currentArticle"></section>
