--- a/art.html
+++ b/art.html
@@ -9,7 +9,6 @@
     <link id="articlestyle" rel="stylesheet" href="./styles/1500.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery.scrollto@2.1.3/jquery.scrollTo.min.js"></script>
-    <script src="articles.js"></script>
   </head>
   <body>
     <div class="wrapper">
@@ -47,6 +46,9 @@
       <!-- Footer -->
       <div id="footer"></div>
     </div>
+    <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.min.js"></script>
+    <script src="https://unpkg.com/tippy.js@6/dist/tippy-bundle.umd.js"></script>
+    <script src="articles.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
