Add persons and places to american icon article

--- a/American_Icon.html
+++ b/American_Icon.html
@@ -43,9 +43,30 @@
               data-label="Faith Ringgold"
               >Faith Ringgold</span
             >
-            / ARS, NY and DACS, London, courtesy ACA Galleries, New York 2022.
-            Digital Image © The Museum of Modern Art/Licensed by SCALA / Art
-            Resource, NY.
+            / ARS,
+            <span
+              id="NewYork"
+              class="mention place"
+              about="NewYork"
+              data-label="New York"
+              >NY</span
+            >
+            and DACS,
+            <span
+              id="London"
+              class="mention place"
+              about="London"
+              data-label="London"
+              >London</span
+            >, courtesy ACA Galleries,
+            <span class="mention place" about="NewYork" data-label="New York"
+              >New York</span
+            >
+            2022. Digital Image © The Museum of Modern Art/Licensed by SCALA /
+            Art Resource,
+            <span class="mention place" about="NewYork" data-label="New York"
+              >NY</span
+            >.
           </figcaption>
         </figure>
 
@@ -57,7 +78,11 @@
             >Faith Ringgold</span
           >
           is an artist, educator, storyteller, activist, mother, and the subject
-          of a major retrospective at the New Museum in New York City.
+          of a major retrospective at the New Museum in
+          <span class="mention place" about="NewYork" data-label="New York"
+            >New York</span
+          >
+          City.
           <span
             class="mention person"
             about="FaithRinggold"
@@ -120,9 +145,12 @@
             data-label="Faith Ringgold"
             >Faith Ringgold</span
           >
-          was an art student at City College in New York where she earned
-          bachelor's and master's degrees in Fine Art, married her first
-          husband, and became the mother to two daughters,
+          was an art student at City College in
+          <span class="mention place" about="NewYork" data-label="New York"
+            >New York</span
+          >
+          where she earned bachelor's and master's degrees in Fine Art, married
+          her first husband, and became the mother to two daughters,
           <span
             id="MicheleWallace"
             class="mention person"
@@ -139,8 +167,16 @@
             >Barbara</span
           >
           , in the 1950s. She worked for almost two decades as an art teacher in
-          the New York public school system and secured her first solo
-          exhibition in 1967 at the Spectrum Gallery in midtown Manhattan.
+          the
+          <span class="mention place" about="NewYork" data-label="New York"
+            >New York</span
+          >
+
+          public school system and secured her first solo exhibition in 1967 at
+          the Spectrum Gallery in midtown
+          <span class="mention place" about="Manhattan" data-label="Manhattan"
+            >Manhattan</span
+          >.
         </p>
 
         <figure>
@@ -152,15 +188,28 @@
               data-label="Faith Ringgold"
               >Faith Ringgold</span
             >, United States of Attica, 1972. Offset lithograph, 21 5/8 x 27 3/8
-            in (55 x 69.6 cm). Courtesy the artist and ACA Galleries, New York.
-            ©
+            in (55 x 69.6 cm). Courtesy the artist and ACA Galleries,
+            <span class="mention place" about="NewYork" data-label="New York"
+              >New York</span
+            >. ©
             <span
               class="mention person"
               about="FaithRinggold"
               data-label="Faith Ringgold"
               >Faith Ringgold</span
             >
-            / ARS, NY and DACS, London, courtesy ACA Galleries, New York 2022.
+            / ARS,
+            <span class="mention place" about="NewYork" data-label="New York"
+              >NY</span
+            >
+            and DACS,
+            <span class="mention place" about="London" data-label="London"
+              >London</span
+            >, courtesy ACA Galleries,
+            <span class="mention place" about="NewYork" data-label="New York"
+              >New York</span
+            >
+            2022.
           </figcaption>
         </figure>
 
@@ -199,18 +248,45 @@
             data-label="Faith Ringgold"
             >Faith Ringgold</span
           >
+
           with her teenage daughters at various protests - and other materials
-          related to The People's Flag Show, co-organized with Jean Toche and
-          Jon Hendricks in 1970 at the Judson Memorial Church in New York. Soon
-          after this exhibition opened,
+          related to The People's Flag Show, co-organized with
+          <span
+            id="JeanToche"
+            class="mention person"
+            about="JeanToche"
+            data-label="Jean Toche"
+            >Jean Toche</span
+          >
+          and
+          <span
+            id="JonHendricks"
+            class="mention person"
+            about="JonHendricks"
+            data-label="Jon Hendricks"
+            >Jon Hendricks</span
+          >
+          in 1970 at the Judson Memorial Church in
+          <span class="mention place" about="NewYork" data-label="New York"
+            >New York</span
+          >. Soon after this exhibition opened,
           <span
             class="mention person"
             about="FaithRinggold"
             data-label="Faith Ringgold"
             >Faith Ringgold</span
-          >, Toche, and Hendricks, also known as the “Judson Three,” were
-          arrested and convicted of using the American flag in an
-          uncomplimentary manner, for which the charges were eventually dropped.
+          >,
+          <span class="mention person" about="JeanToche" data-label="Jean Toche"
+            >Jean Toche</span
+          >, and
+          <span
+            class="mention person"
+            about="JonHendricks"
+            data-label="Jon Hendricks"
+            >Jon Hendricks</span
+          >, also known as the “Judson Three,” were arrested and convicted of
+          using the American flag in an uncomplimentary manner, for which the
+          charges were eventually dropped.
         </p>
 
         <p>
@@ -243,9 +319,17 @@
             data-label="Faith Ringgold"
             >Faith Ringgold</span
           >
-          was denied membership to the Spiral group, of which Emma Amos was the
-          only female artist invited to join this reputable group of Black male
-          artists. Regardless,
+
+          was denied membership to the Spiral group, of which
+          <span
+            id="Emma Amos"
+            class="mention person"
+            about="EmmaAmos"
+            data-label="Emma Amos"
+            >Emma Amos</span
+          >
+          was the only female artist invited to join this reputable group of
+          Black male artists. Regardless,
           <span
             class="mention person"
             about="FaithRinggold"
@@ -275,14 +359,28 @@
               >Ringgold</span
             >, American People Series #15: Hide Little Children, 1966. Oil on
             canvas, 26 x 48 in. (66 x 121.9 cm). Private collection; courtesy
-            Pippy Houldsworth Gallery, London. ©
+            Pippy Houldsworth Gallery,
+            <span class="mention place" about="London" data-label="London"
+              >London</span
+            >. ©
             <span
               class="mention person"
               about="FaithRinggold"
               data-label="Faith Ringgold"
               >Faith Ringgold</span
             >
-            / ARS, NY and DACS, London, courtesy ACA Galleries, New York 2022.
+            / ARS,
+            <span class="mention place" about="NewYork" data-label="New York"
+              >NY</span
+            >
+            and DACS,
+            <span class="mention place" about="London" data-label="London"
+              >London</span
+            >, courtesy ACA Galleries,
+            <span class="mention place" about="NewYork" data-label="New York"
+              >New York</span
+            >
+            2022.
           </figcaption>
         </figure>
 
@@ -335,7 +433,18 @@
               data-label="Faith Ringgold"
               >Faith Ringgold</span
             >
-            / ARS, NY and DACS, London, courtesy ACA Galleries, New York 2022.
+            / ARS,
+            <span class="mention place" about="NewYork" data-label="New York"
+              >NY</span
+            >
+            and DACS,
+            <span class="mention place" about="London" data-label="London"
+              >London</span
+            >, courtesy ACA Galleries,
+            <span class="mention place" about="NewYork" data-label="New York"
+              >New York</span
+            >
+            2022.
           </figcaption>
         </figure>
 
@@ -384,8 +493,18 @@
               data-label="Faith Ringgold"
               >Faith Ringgold</span
             >
-            / ARS, NY and DACS, London, courtesy ACA Galleries, New York 2022.
-            Photo: Art Institute of Chicago / Art Resource.
+            / ARS,
+            <span class="mention place" about="NewYork" data-label="New York"
+              >NY</span
+            >
+            and DACS,
+            <span class="mention place" about="London" data-label="London"
+              >London</span
+            >, courtesy ACA Galleries,
+            <span class="mention place" about="NewYork" data-label="New York"
+              >New York</span
+            >
+            2022. Photo: Art Institute of Chicago / Art Resource.
           </figcaption>
         </figure>
 
@@ -398,10 +517,17 @@
             about="FaithRinggold"
             data-label="Faith Ringgold"
             >Ringgold</span
-          >'s imagination takes off with the introduction of textiles for
+          >
+          's imagination takes off with the introduction of textiles for
           numerous series of soft sculpture masks and story quilt paintings.
-          Made in collaboration with her mother Willie Posey, a couture fashion
-          designer who taught
+          Made in collaboration with her mother
+          <span
+            id="WilliePosey"
+            class="mention person"
+            about="WilliePosey"
+            data-label="Willie Posey"
+            >Willie Posey</span
+          >, a couture fashion designer who taught
           <span
             class="mention person"
             about="FaithRinggold"
@@ -443,16 +569,34 @@
               >Faith Ringgold</span
             >, Slave Rape #3: Fight to Save Your Life, 1972. Oil on canvas with
             fabric, 92 x 50 7/8 in (233.7 x 129.2 cm). Glenstone Museum,
-            Potomac, Maryland. ©
+            Potomac,
+            <span
+              id="Maryland"
+              class="mention place"
+              about="Maryland"
+              data-label="Maryland"
+              >Maryland</span
+            >
+
+            . ©
             <span
               class="mention person"
               about="FaithRinggold"
               data-label="Faith Ringgold"
               >Faith Ringgold</span
             >
-            / ARS, NY and DACS, London, courtesy ACA Galleries, New York 2022.
-            Photo: Tom Powel Imaging; courtesy Pippy Houldsworth Gallery,
-            London.
+            / ARS,
+            <span class="mention place" about="NewYork" data-label="New York"
+              >NY</span
+            >
+            and DACS,
+            <span class="mention place" about="London" data-label="London"
+              >London</span
+            >, courtesy ACA Galleries,
+            <span class="mention place" about="NewYork" data-label="New York"
+              >New York</span
+            >
+            2022.
           </figcaption>
         </figure>
 
@@ -505,14 +649,28 @@
               >Faith Ringgold</span
             >, The Wake and Resurrection of the Bicentennial Negro, 1975-89.
             Mixed media, dimensions variable. Courtesy the artist and ACA
-            Galleries, New York. ©
+            Galleries,
+            <span class="mention place" about="NewYork" data-label="New York"
+              >New York</span
+            >. ©
             <span
               class="mention person"
               about="FaithRinggold"
               data-label="Faith Ringgold"
               >Faith Ringgold</span
             >
-            / ARS, NY and DACS, London, courtesy ACA Galleries, New York 2022.
+            / ARS,
+            <span class="mention place" about="NewYork" data-label="New York"
+              >NY</span
+            >
+            and DACS,
+            <span class="mention place" about="London" data-label="London"
+              >London</span
+            >, courtesy ACA Galleries,
+            <span class="mention place" about="NewYork" data-label="New York"
+              >New York</span
+            >
+            2022.
           </figcaption>
         </figure>
 
@@ -534,10 +692,24 @@
             >Ringgold</span
           >
           draws on masquerade traditions from the Dan people of modern-day
-          Liberia and Côte d'Ivoire that make use of sculpture, costume, music,
-          dance, and drama as a catalyst tor the critique of the American
-          Bicentennial, which was celebrated with enormous pageantry in 1976.
-          For
+          <span
+            id="Liberia"
+            class="mention place"
+            about="Liberia"
+            data-label="Liberia"
+            >Liberia</span
+          >
+          and
+          <span
+            id="Côte d'Ivoire"
+            class="mention place"
+            about="Côte d'Ivoire"
+            data-label="Côte d'Ivoire"
+            >Côte d'Ivoire</span
+          >
+          that make use of sculpture, costume, music, dance, and drama as a
+          catalyst tor the critique of the American Bicentennial, which was
+          celebrated with enormous pageantry in 1976. For
           <span
             class="mention person"
             about="FaithRinggold"
@@ -561,7 +733,17 @@
             about="FaithRinggold"
             data-label="Faith Ringgold"
             >Faith Ringgold</span
-          >: American People, Museum Label, New Museum, New York, NY ,USA.
+          >: American People, Museum Label, New Museum,
+          <span class="mention place" about="NewYork" data-label="New York"
+            >New York</span
+          >,
+          <span class="mention place" about="NewYork" data-label="New York"
+            >NY</span
+          >
+          ,
+          <span id="USA" class="mention place" about="USA" data-label="USA"
+            >USA</span
+          >.
         </p>
 
         <p>
@@ -631,7 +813,18 @@
               data-label="Faith Ringgold"
               >Ringgold</span
             >
-            / ARS, NY and DACS, London, courtesy ACA Galleries, New York 2022.
+            / ARS,
+            <span class="mention place" about="NewYork" data-label="New York"
+              >NY</span
+            >
+            and DACS,
+            <span class="mention place" about="London" data-label="London"
+              >London</span
+            >, courtesy ACA Galleries,
+            <span class="mention place" about="NewYork" data-label="New York"
+              >New York</span
+            >
+            2022.
           </figcaption>
         </figure>
 
@@ -659,8 +852,15 @@
             data-label="Willie Marie Simone"
             >Willie Marie Simone</span
           >
-          , a combination of the artist and the artist's mother, moves to Paris,
-          marries a white man, has two children, and becomes a widow within a
+          , a combination of the artist and the artist's mother, moves to
+          <span
+            id="Paris"
+            class="mention place"
+            about="Paris"
+            data-label="Paris"
+            >Paris</span
+          >
+          , marries a white man, has two children, and becomes a widow within a
           short time span. Following the death of her husband,
           <span
             class="mention person"
@@ -690,8 +890,12 @@
             >Ringgold</span
           >
           generously references the presence of Black American expatriates who
-          were actually in Paris around that time and who took refuge in the
-          relaxed attitudes of the French towards African Americans.
+          were actually in
+          <span class="mention place" about="Paris" data-label="Paris"
+            >Paris</span
+          >
+          around that time and who took refuge in the relaxed attitudes of the
+          French towards African Americans.
         </p>
 
         <p>
@@ -709,9 +913,16 @@
             about="WillieMarieSimone"
             data-label="Willie Marie Simone"
             >Willie Marie </span
-          >'s time in France, her experiences of being a Black woman artist, and
-          her decision to not raise her children. In response to her aunt's
-          question about her choice to become an artist,
+          >'s time in
+          <span
+            id="France"
+            class="mention place"
+            about="France"
+            data-label="France"
+            >France</span
+          >, her experiences of being a Black woman artist, and her decision to
+          not raise her children. In response to her aunt's question about her
+          choice to become an artist,
           <span
             class="mention person"
             about="WillieMarieSimone"
@@ -753,7 +964,18 @@
               data-label="Faith Ringgold"
               >Faith Ringgold</span
             >
-            / ARS, NY and DACS, London, courtesy ACA Galleries, New York 2022.
+            / ARS,
+            <span class="mention place" about="NewYork" data-label="New York"
+              >NY</span
+            >
+            and DACS,
+            <span class="mention place" about="London" data-label="London"
+              >London</span
+            >, courtesy ACA Galleries,
+            <span class="mention place" about="NewYork" data-label="New York"
+              >New York</span
+            >
+            2022.
           </figcaption>
         </figure>
 
@@ -908,7 +1130,18 @@
               data-label="Faith Ringgold"
               >Faith Ringgold</span
             >
-            / ARS, NY and DACS, London, courtesy ACA Galleries, New York 2022.
+            / ARS,
+            <span class="mention place" about="NewYork" data-label="New York"
+              >NY</span
+            >
+            and DACS,
+            <span class="mention place" about="London" data-label="London"
+              >London</span
+            >, courtesy ACA Galleries,
+            <span class="mention place" about="NewYork" data-label="New York"
+              >New York</span
+            >
+            2022.
           </figcaption>
         </figure>
       </div>
