--- a/art.html
+++ b/art.html
@@ -35,11 +35,11 @@
           <button type="button" class="collapsible">People</button>
           <div class="content" id="person"></div>
           <button type="button" class="collapsible">Places</button>
-          <div class="content"></div>
+          <div class="content" id="place"></div>
           <button type="button" class="collapsible">Events</button>
-          <div class="content"></div>
+          <div class="content" id="event"></div>
           <button type="button" class="collapsible">Concepts</button>
-          <div class="content"></div>
+          <div class="content" id="concept"></div>
         </div>
         <section id="currentArticle"></section>
       </div>
