Add dynamic loading of metadata

--- a/American_Icon.html
+++ b/American_Icon.html
@@ -1,4 +1,13 @@
 <html lang="en">
+  <head>
+    <meta
+      name="title"
+      content="American Icon - Faith Ringgold at the New Museum"
+    />
+    <meta name="author" content="Jennifer S. Musawwir" />
+    <meta name="published" content="2020-04-04" />
+    <meta name="subject" content="Faith Ringold" />
+  </head>
   <body>
     <div class="articleContainer">
       <h1>
@@ -174,7 +183,11 @@
 
           public school system and secured her first solo exhibition in 1967 at
           the Spectrum Gallery in midtown
-          <span class="mention place" about="Manhattan" data-label="Manhattan"
+          <span
+            id="Manhattan"
+            class="mention place"
+            about="Manhattan"
+            data-label="Manhattan"
             >Manhattan</span
           >.
         </p>
@@ -701,9 +714,9 @@
           >
           and
           <span
-            id="Côte d'Ivoire"
+            id="Cote"
             class="mention place"
-            about="Côte d'Ivoire"
+            about="Cote"
             data-label="Côte d'Ivoire"
             >Côte d'Ivoire</span
           >
