--- a/Edo.html
+++ b/Edo.html
@@ -1,4 +1,13 @@
 <html lang="en">
+  <head>
+    <meta
+      name="title"
+      content="Edo Period in 10 Words and 4 Schools of Painting"
+    />
+    <meta name="author" content="Joanna Kaszubowska" />
+    <meta name="published" content="2022-01-17" />
+    <meta name="subject" content="Edo period, painting, art" />
+  </head>
   <body>
     <div class="articleContainer">
       <h1>Edo Period in 10 Words and 4 Schools of Painting</h1>
