Add infobox to metadataviewer

--- a/art.html
+++ b/art.html
@@ -32,6 +32,7 @@
       <div id="main-content">
         <div id="metadataviewer">
           <!-- <h3>Metadata</h3> -->
+          <div id="info-box"></div>
           <button type="button" class="collapsible">People</button>
           <div class="content" id="person"></div>
           <button type="button" class="collapsible">Places</button>
