Toggle style underline

--- a/art.html
+++ b/art.html
@@ -13,20 +13,34 @@
   <body>
     <div class="wrapper">
       <div id="header"></div>
-      <!-- Change Style -->
-      <div class="change-style">
-        <p class="style">Style:</p>
-        <button class="style-button" onclick="changeStyle('./styles/1500.css')">
-          1500
-        </button>
-        <button class="style-button" onclick="changeStyle('./styles/2000.css')">
-          2000
-        </button>
-      </div>
-      <!-- Pagination -->
-      <div class="pagination">
-        <button class="style-button" onclick="changeArticle(-1)">&larr;</button>
-        <button class="style-button" onclick="changeArticle(1)">&rarr;</button>
+      <div class="sub-header">
+        <!-- Change Style -->
+        <div class="change-style">
+          <p class="style">Style:</p>
+          <button
+            id="button-1500"
+            class="style-button active-style"
+            onclick="changeStyle('1500')"
+          >
+            1500
+          </button>
+          <button
+            id="button-2000"
+            class="style-button"
+            onclick="changeStyle('2000')"
+          >
+            2000
+          </button>
+        </div>
+        <!-- Pagination -->
+        <div class="pagination">
+          <button class="style-button" onclick="changeArticle(-1)">
+            &larr;
+          </button>
+          <button class="style-button" onclick="changeArticle(1)">
+            &rarr;
+          </button>
+        </div>
       </div>
       <!-- Main content -->
       <div id="main-content">
