Finish american icon metadata

--- a/American_Icon.html
+++ b/American_Icon.html
@@ -181,8 +181,15 @@
             >New York</span
           >
 
-          public school system and secured her first solo exhibition in 1967 at
-          the Spectrum Gallery in midtown
+          public school system and secured her
+          <span
+            id="firstSoloExhibition"
+            class="mention event"
+            about="firstSoloExhibition"
+            data-label="first solo exhibition"
+            >first solo exhibition</span
+          >
+          in 1967 at the Spectrum Gallery in midtown
           <span
             id="Manhattan"
             class="mention place"
@@ -235,7 +242,22 @@
             data-label="Burdett Ringgold"
             >Burdett Ringgold</span
           >
-          , and became an active participant in the Civil Rights and Feminist
+          , and became an active participant in the firstSoloExhibition
+          <span
+            id="civilRights"
+            class="mention concept"
+            about="civilRights"
+            data-label="Civil Rights"
+            >Civil Rights</span
+          >
+          and
+          <span
+            id="Feminism"
+            class="mention concept"
+            about="Feminism"
+            data-label="Feminism"
+            >Feminist</span
+          >
           Art Movements of the late 1960s and early 1970s. She was co-founder of
           several groups including the Art Workers' Coalition (AWC), Where We
           At, and Women Students and Artists for Black Art Liberation (WSABAL).
@@ -253,8 +275,15 @@
           against the underrepresentation of women and Black artists at art
           institutions such as the Whitney Museum of American Art and the Museum
           of Modern Art. The New Museum has devoted a gallery space to this
-          period of activism with correspondence, posters, photographs - some
-          showing
+          period of
+          <span
+            id="activism"
+            class="mention concept"
+            about="activism"
+            data-label="activism"
+            >activism</span
+          >
+          with correspondence, posters, photographs - some showing
           <span
             class="mention person"
             about="FaithRinggold"
@@ -409,23 +438,60 @@
         </p>
 
         <p>
-          The showdown between white supremacy and black power is quietly
-          addressed in some paintings from the American People Series, for
-          example in Hide Little Children. In other paintings from this series,
-          the confrontation is amplified as in The Flag is Bleeding and U.S.
-          Postage Stamp Commemorating the Advent of Black Power but reaches an
-          absolute boiling point in Die.
+          The showdown between
+          <span
+            id="white supremacy"
+            class="mention concept"
+            about="white supremacy"
+            data-label="white supremacy"
+            >white supremacy</span
+          >
+          and
+          <span
+            id="blackPower"
+            class="mention concept"
+            about="blackPower"
+            data-label="black power"
+            >black power</span
+          >
+          is quietly addressed in some paintings from the American People
+          Series, for example in Hide Little Children. In other paintings from
+          this series, the confrontation is amplified as in The Flag is Bleeding
+          and U.S. Postage Stamp Commemorating the Advent of
+          <span
+            id="blackPower"
+            class="mention concept"
+            about="blackPower"
+            data-label="black power"
+            >Black Power</span
+          >
+          but reaches an absolute boiling point in Die.
         </p>
 
         <p>
-          These three mural paintings reveal the systemic racism eating away at
-          a democracy that was never pure through the clever incorporation of
-          racial slurs and terms of empowerment with patriotic symbols such as
-          the U.S. flag and the U.S. postal stamp. The vision of chaos, the race
-          riot in Die captures the turbulence of the 1960s, however, the
-          intensity of this scene and those of all the paintings from the
-          American People Series continue to resonate given that the uneven
-          distribution of power and opportunity continues to plague this nation.
+          These three mural paintings reveal the systemic
+          <span
+            id="racism"
+            class="mention concept"
+            about="racism"
+            data-label="racism"
+            >racism</span
+          >
+          eating away at a
+          <span
+            id="democracy"
+            class="mention concept"
+            about="democracy"
+            data-label="democracy"
+            >democracy</span
+          >
+          that was never pure through the clever incorporation of racial slurs
+          and terms of empowerment with patriotic symbols such as the U.S. flag
+          and the U.S. postal stamp. The vision of chaos, the race riot in Die
+          captures the turbulence of the 1960s, however, the intensity of this
+          scene and those of all the paintings from the American People Series
+          continue to resonate given that the uneven distribution of power and
+          opportunity continues to plague this nation.
         </p>
 
         <figure>
@@ -552,7 +618,10 @@
         </p>
 
         <p>
-          The collaboration between daughter and mother began with the Feminist
+          The collaboration between daughter and mother began with the
+          <span class="mention concept" about="Feminism" data-label="Feminism"
+            >Feminist</span
+          >
           Series and Slave Rape paintings that were in part response to Tibetan
           tanka (thangkas) paintings, a sacred and portable art form of
           paintings on fabric that could be rolled up. Drawn to this rich
@@ -778,8 +847,16 @@
             data-label="Faith Ringgold"
             >Ringgold</span
           >
-          published her first children's book, Tar Beach in 1991. Based on her
-          Woman on a Bridge series of story quilts from the mid to late 1980s,
+          published her
+          <span
+            id="firstChildrenBook"
+            class="mention event"
+            about="firstChildrenBook"
+            data-label="first children's book"
+            >first children's book</span
+          >
+          , Tar Beach in 1991. Based on her Woman on a Bridge series of story
+          quilts from the mid to late 1980s,
           <span
             class="mention person"
             about="FaithRinggold"
