changes to file structure and added styles and articles

--- a/issues.html
+++ b/issues.html
@@ -77,7 +77,7 @@
           </div>
       </section>
 
-    <!-- <footer class="footer" style="padding: 1rem; margin-top: 2rem;">
+    <footer class="footer" style="padding: 1rem; margin-top: 2rem;">
         <div class="footer-content">
           <img style="width: 250px;" src="images/Logo.svg" />
          
@@ -92,7 +92,7 @@
             </p>
         </div>
     </footer>
-    -->
+   
      
 
     </div>
