--- a/art.html
+++ b/art.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="issue" conent="art" />
+    <meta name="issue" content="art" />
     <title>Timeline Mag</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" type="image/x-icon" href="/images/Logo.svg" />
     <link id="articlestyle" rel="stylesheet" href="./styles/1500.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery.scrollto@2.1.3/jquery.scrollTo.min.js"></script>
   </head>
@@ -31,6 +34,12 @@
             onclick="changeStyle('2000')"
           >
             2000
+          </button>
+          <button id="button-1900" class="style-button" onclick="changeStyle('early_1900')">
+            Early 20th
+          </button>
+          <button id="button-2030" class="style-button" onclick="changeStyle('2030')">
+            2030
           </button>
         </div>
         <!-- Pagination -->
