--- a/disclaimer.html
+++ b/disclaimer.html
@@ -39,16 +39,27 @@
         <h1>DISCLAIMER</h1>
         <div class="text">
             <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste unde ex fugit cupiditate quis quod libero recusandae inventore sed laborum sequi architecto ullam sapiente quae, vitae suscipit delectus corporis? Delectus qui, vero libero ullam vel architecto asperiores sequi dolorem, unde quas eligendi. Repellat, fugit! Ea ipsum laborum, exercitationem ut quibusdam possimus a natus, eos itaque, quia ab consectetur unde perferendis in! Explicabo, vitae sit molestiae facilis laborum odit earum excepturi, atque rem ad nobis odio neque quae, autem voluptates consequuntur! Amet ea numquam rem tenetur, incidunt itaque. Eos accusantium praesentium, quae, quos ratione dolor, vero sit sint eaque rerum soluta!
-            </p>
-            <br/>
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis aliquid iste quae magnam voluptatem eos porro pariatur laudantium alias iure quidem doloremque, harum incidunt autem corporis voluptatibus id nobis error, sed sint necessitatibus. Alias hic minima atque maxime, molestiae cumque vitae suscipit ipsa dignissimos cum eligendi tempore iure odit asperiores non saepe quasi qui mollitia, officia nostrum, doloribus et repellendus ipsum? Quaerat eius, cum ullam odit deleniti repudiandae harum veniam illum voluptatem fuga itaque porro eveniet rerum reiciendis dolores et facilis est illo inventore error fugit tempora assumenda saepe nobis. Cupiditate neque consectetur voluptates quam ab ex eveniet, nemo assumenda numquam nulla inventore atque quaerat temporibus explicabo repellat deleniti quisquam, dolorem dignissimos nesciunt dolorum perspiciatis. Laborum, iure odio assumenda amet repudiandae cumque voluptate recusandae labore ipsum aliquid facere voluptas velit soluta dolores illo. Doloribus autem sapiente quia adipisci blanditiis, perferendis harum mollitia consequuntur dignissimos magnam minima suscipit maxime accusamus enim fuga nam voluptatum dolor nobis sit, sed quidem eos molestias! Fugiat dicta fuga, quibusdam accusantium nesciunt aut. Error temporibus aliquid incidunt sint eos, cumque ipsam corporis. Ab, distinctio officia? Dolor facilis aliquid explicabo fugit eius esse earum ea autem repudiandae! Voluptate adipisci placeat harum ullam amet iste doloremque quam omnis.
-            </p>
-            <br/>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, sunt minima? Labore, sed debitis vel dignissimos necessitatibus recusandae iure unde possimus. Neque, explicabo ea voluptas corrupti ducimus nostrum, quae iusto laboriosam omnis totam labore doloremque perspiciatis distinctio? Vitae ab incidunt quod neque cupiditate possimus laboriosam cum ipsum illo aliquam nihil veritatis velit repudiandae expedita doloribus, ipsam nemo non ad quos consectetur fugiat quaerat ducimus! Nulla ut dolorem eveniet molestias, saepe quam adipisci unde sapiente alias ipsam in dignissimos facere dolor amet fugit enim eos tempora maiores eligendi? Rerum velit tempora obcaecati veniam distinctio voluptates! Tempore reprehenderit nisi ex alias ab debitis suscipit consectetur quae vitae voluptatem eum saepe amet perspiciatis incidunt minima, beatae molestiae, placeat animi laborum corrupti assumenda possimus. Eligendi saepe beatae dolore nostrum quas maiores vel ullam sed. Quas illo, voluptatibus voluptatem, sint ex architecto dolore quod laudantium illum vero nostrum cumque. Molestias distinctio modi sequi minima sint alias ullam, tempora quisquam laudantium provident. Tempore sit minus eligendi fugit quisquam laborum numquam officiis corrupti ut ea tenetur quas maiores totam eveniet doloribus, aut illo iusto reprehenderit repellendus ducimus autem. A, labore amet veritatis hic ad vero eveniet explicabo consectetur quo iste inventore excepturi natus, officiis quos magni nam ex id fugit, fuga dolores suscipit voluptas ratione qui facilis. Excepturi, aliquid. Inventore asperiores obcaecati velit ea ex adipisci, optio impedit pariatur ipsam temporibus atque est minima aliquam aliquid quos excepturi eos repellat repudiandae? Aperiam esse eligendi explicabo sequi aliquid quia nihil dignissimos asperiores, laudantium, repudiandae nostrum! Alias, aperiam quia! Expedita, unde? Hic illo soluta, ab deserunt repellendus, provident enim commodi voluptatem, labore modi fuga aperiam quae doloribus? Expedita sed hic magnam illo nesciunt minima rem ipsum exercitationem non maxime ratione itaque nihil ab consectetur, dignissimos illum nobis consequuntur assumenda aspernatur iste pariatur corporis modi doloremque. Explicabo dignissimos temporibus sapiente.
-            </p>
+              The purpose of this web site is to explore various types of typographic and
+              layout style for text documents, as an end-of-course project for the "Information
+              Modeling and Web technologies" course of the Master Degree in Digital Humanities
+              and Digital Knowledge of the University of Bologna, under prof. Fabio Vitali.
+              The documents contained in this web site have been selected for their length and
+              complexity from already existing magazines(see links). Their publication here is not intended to be an alternative or
+              replace their original locations:</p>
+             <br><br>
+                <ul>
+                  <li>Magazine 1: https://www.dailyartmagazine.com/</li>
+                  <li>
+                    Magazine 2: https://www.nme.com/
+                  </li>
+                </ul>
+              <br>
+                <p> All copyrights and related rights on the content remain with their original owners.
+              All copyright on the typographic and layout choices are 2022 © William Østensen, Mathilde Tillman Hegdal          </p>
+            
+
+                </p>
+             
         </div>
       </section>
 
